[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcszap"
version = "0.4.1"
authors = [{ name = "Jack Deeth", email = "developer@jackdeeth.org.uk" }]
description = "DCS-BIOS client to automate aircraft setup"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Utilities",
]
keywords = [
    "DCS",
    "DCSWorld",
    "digital-combat-simulator",
    "automation",
    "flightsim",
]

[project.scripts]
dcszap = "dcszap:main"

[project.urls]
Homepage = "https://github.com/JDeeth/DCSZap"
"Bug Tracker" = "https://github.com/JDeeth/DCSZap/issues"

[project.optional-dependencies]
dev = [
    "coverage",
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "hypothesis",
    "pylint",
    "black",
    "bumpver",
    "pre-commit",
    "tox",
]
publish = ["setuptools>=61.1.0", "build", "twine"]

[tool.pytest]
xfail_strict = true
addopts = ["--cov=dcszap", "-p no:faulthandler", "--strict-markers"]
markers = ["wip: work in progress"]
mock_use_standalone_module = true
mock_traceback_monkeypatch = true


[tool.bumpver]
current_version = "0.4.1"
version_pattern = "MAJOR.MINOR[.PATCH[PYTAGNUM]]"
commit_message = "bump version to {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"$']
"dcszap.py" = ['^__version__ = "{version}"$']

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list =
        py312
        py311
        py310
        py39
        py38
        py37

    [testenv]
    deps =
        pytest
        pytest-mock
    commands = pytest tests

    [testenv:py37]
    deps =
        pytest
        pytest-mock==3.11.1
    commands = pytest tests
"""
