[metadata]
name = dcszap
version = 0.4.0
author = Jack Deeth
description = DCS-BIOS client to automate aircraft setup
license = MIT
license_files = LICENSE

[options]
packages = find:
package_dir =
    = src
python_requires = >= 3.7
#install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    DCSZap=dcszap:main

[options.extras_require]
dev =
    coverage
    mock
    pytest
    pytest-cov
    pytest-mock
    hypothesis
    pylint
    black

[tool:pytest]
xfail_strict = true
addopts =
    --cov=src
    -p no:faulthandler
    --strict-markers
markers =
    wip: work in progress
mock_use_standalone_module = true
mock_traceback_monkeypatch = true
